first test jwt handler
